syntax  = "proto3";

package chatCamion;

service ServicioCamion {
    rpc FuncHolaMUndo(MensajeRequest) returns (MensajeReply);
}

message MensajeRequest {
    string name = 1;
}

message MensajeReply {
    string name = 1;
}


// luego se compila con comando "protoc --proto..."